# berkshire-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_EN.md  TESTING.md  VERSION_HISTORY.md  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json  update-platforms.sh
assets/: architecture.mmd
config/: skill.md  state.md
data/: holdings.example.json  morningstar_fair_value_20260519.csv  morningstar_fair_value_20260626.csv  portfolio_decision_seeds.json
docs/: BACKTEST.md  ENGINE.md  PROMPT_TEMPLATES.md  QUANT.md  README.md  RESEARCH_EFFECTIVENESS.md  ROADMAP.md  SKILLS.md  SKILL_EVOLUTION.md  USER_GUIDE.md  action-card.md  qlib_evaluation.md  quant_data_fusion.md  rdagent_reference.md  report-conventions.md  tdx_mcp_tool_design.md  textgrad_design.md
graphify-out/: GRAPH_REPORT.md  graph.json  manifest.json
memory/: 2026-07-04.md
reports/: README.md
scripts/: cron-evolution.sh  portfolio-weekly.sh  release-check.sh  weekly-posterior.sh
skills/: anysearch-web.md  bottleneck-hunter.md  deep-company-series.md  dyp-ask.md  earnings-review.md  earnings-team.md  financial-data.md  industry-funnel.md  industry-research.md  investment-checklist.md  investment-research.md  investment-team.md  management-deep-dive.md  news-pulse.md  portfolio-review.md  private-company-research.md  quality-screen.md  thesis-tracker.md  wechat-article.md
src/: __init__.py  access_control.py  config.py  cron_evolution.py  debate.py  decision_log.py  eval_harness.py  evidence_channels.py  evolution_cli.py  evolution_loop_v10.py  experience_store.py  graph.py  graph_analysis.py  hypothesis.py  llm_gradient.py  metrics_export.py  observability.py  optimizer.py  output_validator.py  paired_replay.py  pipeline.py  posterior_report.py  prompt_optimizer.py  prompt_validation.py  quality_scorer.py  realized_feedback.py  reflect.py  research_loop.py  run_recorder.py  sanitize.py  scenario.py  service.py  signal_proposer.py  tavily_search.py  trace_recorder.py  trajectory_ab.py
tests/: test_access_control.py  test_aktools_diagnostic.py  test_ashare_alphagpt.py  test_calibrate_conviction.py  test_calibrate_sensitivity.py  test_config.py  test_cron_evolution.py  test_eval_harness.py  test_eval_harness_golden.py  test_eval_harness_rerun.py  test_evidence_channels.py  test_evolution_cli.py  test_evolution_llm_wiring.py  test_experience_store.py  test_factor_screener_bridge.py  test_feedback_due_decisions.py  test_golden_action_card.py  test_graph_analysis.py  test_hypothesis.py  test_limitup_scoring.py  test_llm_gradient.py  test_metrics_export.py  test_network_price_provider.py  test_observability.py  test_pipeline.py  test_pipeline_brainstorm.py  test_pipeline_signals.py  (+37 more)
(+144 files in other folders)
