[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "berkshire-ai"
version = "10.16.0"
description = "四大师并行投研系统 + V10 TextGrad 自进化引擎（OpenClaw / QwenPaw 适配）"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "berkshire-ai contributors" }]
keywords = ["investment", "textgrad", "multi-agent", "llm", "research"]

# 运行时仅 httpx（Tavily 实时检索 + OpenAI 兼容 LLM 客户端）。
# 数据降级链 / 多通道推送的内置源仅用系统 curl，无需第三方库。
dependencies = ["httpx>=0.27,<1.0"]

[project.optional-dependencies]
# A 股数据降级链备用源（tools/data_sources.py），缺库时 import 守卫静默跳过
ashare = ["akshare", "tushare", "efinance", "baostock", "yfinance"]
# 服务边界（src/service.py 的 FastAPI 传输层）
service = ["fastapi>=0.110", "uvicorn>=0.29"]
# 开发 / CI 工具链
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/mckayhou/berkshire-ai"
History = "https://github.com/mckayhou/berkshire-ai/blob/main/VERSION_HISTORY.md"

# 该仓库主要经 update-platforms.sh 部署（拷贝 skills/tools），此处包声明用于
# 可选的 `pip install -e .`；引擎核心在 src/，CLI 工具在 tools/。
[tool.setuptools]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff：lint + import 排序。规则集「有意义但不制造无谓 churn」。
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E741 含中文/金融语境下的单字母变量（如 S/J 校准参数）属可接受；E501 行宽对
# 大量中文文档串过于苛刻——均忽略，保留真正有价值的 F（未用/未定义）与 E 其余项。
ignore = ["E741", "E501"]

[tool.ruff.lint.per-file-ignores]
# 测试与部分 CLI 脚本在 import 前插入 sys.path / 设置环境，E402 属有意为之
"tests/*" = ["E402"]
"tools/calibrate_sensitivity.py" = ["E402"]
"src/evolution_loop_v10.py" = ["E402"]

# ---------------------------------------------------------------------------
# mypy：仅对核心引擎 src/ 做类型检查（宽松起步，逐步收紧）。
# ---------------------------------------------------------------------------
[tool.mypy]
files = ["src"]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
# src/ 内模块用 try/except 双导入（绝对 + 相对）以兼容 sys.path 注入，
# 关闭重复模块名检查避免误报。
explicit_package_bases = true
follow_imports = "silent"

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src", "tools"]
omit = ["*/__pycache__/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
